fluxcd/apps/base/librespeed/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: librespeed
  annotations:
    linkerd.io/inject: enabled
